src/test/deca/context/invalid/op_comp_inval_02.deca
// Description:
//    Affectation et typage
//
// Resultats:
//    Ligne 11: op_comp_inval_02.deca:11:18: Compare operation type mismatch
//
// Historique:
//    cree le 01/01/2023

{
    boolean a = 2 < true;
}
